--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -7514,7 +7514,7 @@ h1, h2, h3, h4, h5,
 
 header {
   padding: 2em 0;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
@@ -7523,7 +7523,7 @@ header {
   @media (max-width: 767.98px) {
     header {
       padding: 2em 0;
-      position: absolute; } }
+      position: fixed; } }
   header .rashtell-navbar-brand {
     float: left; }
     header .rashtell-navbar-brand .rashtell-logo {
